# adhara_engine

./: .env.example  .gitignore  AGENT_GUIDE.md  AUTH_COMPARISION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  PLAN.md  PRD.md  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml
alloy/: config.alloy
api/: Dockerfile  alembic.ini  requirements.txt
api/alembic/: env.py
api/app/: main.py
api/scripts/: create_token.py  seed.py
cli/: pyproject.toml
cli/adhara_engine_cli/: client.py  main.py  output.py  resolve.py
cli/adhara_engine_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: ARCHITECTURE.md  DEPLOYING_SITES.md  DEPLOY_JUNGLE.md  ENGINE_INTEGRATION_GUIDE.md  GCP_DEPLOYMENT.md  LOCAL_SETUP.md
docs/PLANS/: BUILD_MACHINE.md  CLIENT_DEPLOY_DOCS.md  GCP_VM_DEPLOY.md  GIT_CODE.md  ZITADEL_INTEGRATION.md
docs/examples/: Dockerfile.nextjs  Dockerfile.static-vite  Dockerfile.vite-express
docs/research/: LOGTO.md  ZITADEL_VS_CASADOR.md
examples/podcast-site/: Dockerfile  Makefile  (+4 more)
scripts/: adhara-secure.sh  adhara_deploy.py  create-user.sh  deploy-site.sh  deploy.sh  deploy_gcp.sh  deploy_ubuntu.sh  destroy_gcp.sh  init-db.sql  ioc-audit.sql  setup-zitadel.sh
test-app/: server.js
traefik/: traefik.yml
ui/: .env  .env.example  Dockerfile  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
(+96 files in other folders)
