[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adhara-engine-cli"
version = "0.1.0"
description = "CLI for Adhara Engine — multi-tenant deployment platform"
license = "LicenseRef-Proprietary"
authors = [{ name = "EIM Global Solutions, LLC" }]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
adhara-engine = "adhara_engine_cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
